add event listeners. tried srollable table

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,42 +36,42 @@
           <table class= "table table-bordered custom-table">
             <thread>
               <tr>
-                <th scope="col-3"><strong></strong>Time</th>
-                  <th scope="col-9"><strong></strong>Project</th>
+                <th scope="col-3"><strong>Time</th>
+                  <th scope="col-9"><strong>Project</th>
               </tr>
             </thread>
             <tbody id="project-display"></tbody>
-            <tr class="clickable-row" data-id="9"> 
-              <td data-id="time-9">9:00</td>                             <!--can I use string name 9 as identifier for the row??-->
-              <td data-id="project-9">free</td>
+            <tr class="time-block" id="9"> 
+              <td data-id="hour">9:00</td>                             <!--can I use string name 9 as identifier for the row??-->
+              <td data-id="description">free</td>
               </tr>
-              <tr class="clickable-row" data-id="10">
-              <td data-id="time-10">10:00</td>
-              <td data-id="project-10">free</td>
+              <tr class="time-block" id="10">
+              <td data-id="hour">10:00</td>
+              <td data-id="description">free</td>
               </tr>
-              <tr class="clickable-row" data-id="11">
-              <td data-id="time-11">11:00</td>
-              <td data-id="project-11">free</td>
+              <tr class="time-block" id="11">
+              <td data-id="hour">11:00</td>
+              <td data-id="description">free</td>
               </tr>
-              <tr class="clickable-row" data-id="12">
-              <td data-id="time-12">12:00</td>
-              <td data-id="project-12">lunch</td>
+              <tr class="time-block" id="12">
+              <td data-id="hour">12:00</td>
+              <td data-id="description">lunch</td>
               </tr>
-              <tr class="clickable-row" data-id="13">
-              <td data-id="time-13">1:00</td>
-              <td data-id="project-13">free</td>
+              <tr class="time-block" id="13">
+              <td data-id="hour">1:00</td>
+              <td data-id="description">free</td>
               </tr>
-              <tr class="clickable-row" data-id="14">
-              <td data-id="time-14">2:00</td>
-              <td data-id="project-14">free</td>
+              <tr class="time-block" id="14">
+              <td data-id="hour">2:00</td>
+              <td data-id="description">free</td>
               </tr>
-              <tr class="clickable-row" data-id="15">
-              <td data-id="time-15">3:00</td>
-              <td data-id="project-15">free</td>
+              <tr class="time-block" id="15">
+              <td data-id="hour">3:00</td>
+              <td data-id="description">free</td>
               </tr>
-              <tr class="clickable-row" data-id="16">
-              <td data-id="time-16">4:00</td>
-              <td data-id="project-16">free</td>
+              <tr class="time-block" id="16">
+              <td data-id="hour">4:00</td>
+              <td data-id="description">free</td>
             </tr>
             </table>
         </div>
@@ -83,8 +83,8 @@
       <input type="text" id="project-name-input"  class="form-control" placeholder required />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary"data-dismiss="modal">Close</button>
-        <button type="submit" class="btn custom-btn">Submit Project Info</button>
+        <button type="sav" class=""data-dismiss="modal">Close</button>
+        <button type="submit" class="btn save-Btn">Submit Project Info</button>
       </div>
     </form>
         -->
