--- a/index.html
+++ b/index.html
@@ -26,70 +26,56 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p class="lead" >Current Date and Time:  <span id="currentDay"></span></p>
+      <p class="lead">Current Date and Time: <span id="currentDay"></span></p>
     </header>
-    <div class="container-fluid">
+    <div class="container">
       <!-- Timeblocks go here -->
-      <div class= "row">
-        <section class= "col-12 col-md-4 col-lg-3">
-          <div class= "table-responsive">
-          <table class= "table table-bordered custom-table">
-            <thread>
-              <tr>
-                <th scope="col-3"><strong>Time</th>
-                  <th scope="col-9"><strong>Project</th>
-              </tr>
-            </thread>
-            <tbody id="project-display"></tbody>
-            <tr class="time-block" id="9"> 
-              <td data-id="hour">9:00</td>                             <!--can I use string name 9 as identifier for the row??-->
-              <td data-id="description">free</td>
-              </tr>
-              <tr class="time-block" id="10">
-              <td data-id="hour">10:00</td>
-              <td data-id="description">free</td>
-              </tr>
-              <tr class="time-block" id="11">
-              <td data-id="hour">11:00</td>
-              <td data-id="description">free</td>
-              </tr>
-              <tr class="time-block" id="12">
-              <td data-id="hour">12:00</td>
-              <td data-id="description">lunch</td>
-              </tr>
-              <tr class="time-block" id="13">
-              <td data-id="hour">1:00</td>
-              <td data-id="description">free</td>
-              </tr>
-              <tr class="time-block" id="14">
-              <td data-id="hour">2:00</td>
-              <td data-id="description">free</td>
-              </tr>
-              <tr class="time-block" id="15">
-              <td data-id="hour">3:00</td>
-              <td data-id="description">free</td>
-              </tr>
-              <tr class="time-block" id="16">
-              <td data-id="hour">4:00</td>
-              <td data-id="description">free</td>
-            </tr>
-            </table>
-        </div>
-      </section>
-      <!--do I add the form here or do I call it in js??
-      <form id="project-form">
-      <div class="form-group">
-      <label for="project-name-input">Project Name</label>
-      <input type="text" id="project-name-input"  class="form-control" placeholder required />
+      <div class="row time-block" id="9">     <!--two class names separated by space, first class that bootstrap recognizes, then one for me -->
+        <div class="col-sm-1 hour">9AM</div>
+        <textarea class="col-sm-10 description"></textarea>    <!--textarea is html tag which defines a writeable space on the page-->
+        <button class="col-sm-1 saveBtn btn">save</button>     <!--textarea will be accessed and updated when user clicks saveBtn-->
       </div>
-      <div class="modal-footer">
-        <button type="sav" class=""data-dismiss="modal">Close</button>
-        <button type="submit" class="btn save-Btn">Submit Project Info</button>
+      <div class="row time-block" id="10">
+        <div class="col-sm-1 hour">10AM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
       </div>
-    </form>
-        -->
+      <div class="row time-block" id="11">
+        <div class="col-sm-1 hour">11AM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div>
+      <div class="row time-block" id="12">
+        <div class="col-sm-1 hour">12PM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div>
+      <div class="row time-block" id="13">
+        <div class="col-sm-1 hour">1PM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div>
+      <div class="row time-block" id="14">
+        <div class="col-sm-1 hour">2PM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div> 
+      <div class="row time-block" id="15">
+        <div class="col-sm-1 hour">3PM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div>
+      <div class="row time-block" id="16">
+        <div class="col-sm-1 hour">4PM</div>
+        <textarea class="col-sm-10 description"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div>    
+    </section>
+    </div>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-    <script src= "script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
