--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@
       <!-- Timeblocks go here -->
       <div class="row time-block" id="9">     <!--two class names separated by space, first class that bootstrap recognizes, then one for me -->
         <div class="col-sm-1 hour">9AM</div>
-        <textarea class="col-sm-10 description"></textarea>    <!--textarea is html tag which defines a writeable space on the page-->
+        <textarea class="col-sm-10 description" id="mtg"></textarea>    <!--textarea is html tag which defines a writeable space on the page-->
         <button class="col-sm-1 saveBtn btn">save</button>     <!--textarea will be accessed and updated when user clicks saveBtn-->
       </div>
       <div class="row time-block" id="10">
         <div class="col-sm-1 hour">10AM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>
       <div class="row time-block" id="11">
         <div class="col-sm-1 hour">11AM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>
       <div class="row time-block" id="12">
         <div class="col-sm-1 hour">12PM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>
       <div class="row time-block" id="13">
         <div class="col-sm-1 hour">1PM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>
       <div class="row time-block" id="14">
         <div class="col-sm-1 hour">2PM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div> 
       <div class="row time-block" id="15">
         <div class="col-sm-1 hour">3PM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>
       <div class="row time-block" id="16">
         <div class="col-sm-1 hour">4PM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>    
     </section>
