--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" id="9">     <!--two class names separated by space, first class that bootstrap recognizes, then one for me -->
+      <div class="row time-block" id="9">     
         <div class="col-sm-1 hour">9AM</div>
         <textarea class="col-sm-10 description" id="mtg"></textarea>    <!--textarea is html tag which defines a writeable space on the page-->
-        <button class="col-sm-1 saveBtn btn">save</button>     <!--textarea will be accessed and updated when user clicks saveBtn-->
+        <button class="col-sm-1 saveBtn btn">save</button>     
       </div>
       <div class="row time-block" id="10">
         <div class="col-sm-1 hour">10AM</div>
@@ -67,6 +67,11 @@
       </div>
       <div class="row time-block" id="16">
         <div class="col-sm-1 hour">4PM</div>
+        <textarea class="col-sm-10 description" id="mtg"></textarea>
+        <button class="col-sm-1 saveBtn btn">save</button>
+      </div>    
+      <div class="row time-block" id="17">
+        <div class="col-sm-1 hour">5PM</div>
         <textarea class="col-sm-10 description" id="mtg"></textarea>
         <button class="col-sm-1 saveBtn btn">save</button>
       </div>    
